# ebay-item-watcher

./: .gitignore  LISCENCE  README.md  main.py  pyproject.toml  requirements.txt  workflow.txt
cli/: __init__.py  commands.py  interface.py  ui.py
client/: auth.py  config.py  ebay_api.py  filters.py  formatter.py  notifier.py
docker/: Dockerfile
scripts/: setup_cron.sh
utils/: color_console_handler.py  logger.py  test_logger.py
