[project]
name = "ebay-item-watcher"
version = "0.1.0"
description = "A CLI tool to watch eBay items and get notified"
authors = [{ name="Brendan Dileo", email="brendandevelopment1@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.1"

dependencies = [
    "requests",
    "colorama",
    "python-dotenv",
    "argparse"
]

[project.scripts]
ebayitemwatcher = "cli.interface:run_cli"